# proof-auditor

./: .gitignore  LICENSE  ProofAuditor.lean  README.md  lakefile.toml  pyproject.toml
ProofAuditor/: Basic.lean
ProofAuditor/Workspace/: Buggy.lean  Correct.lean  audit_buggy_proof.txt  buggy_proof.lean  correct_proof.lean  correct_proof.txt  web_audit_cdd8f3fa.lean  web_audit_cdd8f3fa.txt
agents/: back_translator.md  diagnostician.md  forward_translator.md  graph_analyst.md  narrator.md  translator.md  translator_plan.md  verifier.md
benchmark/: expected_results.json
benchmark/phase0/: buggy_proof.txt
benchmark/phase1/: buggy_proof.txt  correct_proof.txt
core/: __init__.py  ai_client.py  back_translator.py  classifier.py  compiler.py  diagnostician.py  fidelity.py  forward_translator.py  latex_parser.py  lean_lsp.py  loop.py  mathlib_reference.py  narrator.py  pdf_extractor.py  plan_goal_alignment.py  proof_graph.py  proof_structure.py  reference_extractor.py  translator_parser.py
data/: lean_translation_patterns.yaml
data/mathlib_domains/: elementary_number_theory.md  linear_algebra.md  measure_theory.md  probability.md  real_analysis.md
reports/: audit_buggy_proof.json  audit_correct_proof.json  audit_web_audit_cdd8f3fa.json
schemas/: sorry_classification.yaml
scripts/: audit.py  phase0_experiment.py  run_benchmark.py
tests/: test_forward_translation.py  test_mathlib_reference.py  test_plan_goal_alignment.py  test_round15_regressions.py
ui/: package.json  start.sh
ui/client/: index.html  package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
